crates/tracing/tests/ui/instrument/report_requires_result.stderr
error: `err` / `report` requires the function to return `Result`
 --> tests/ui/instrument/report_requires_result.rs:4:4
  |
4 | fn foo() {}
  |    ^^^
