crates/tracing/tests/ui/instrument/report_requires_result.rs
use miden_node_tracing::instrument;

#[instrument(rpc: report)]
fn foo() {}

fn main() {}
